--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,9 +20,10 @@
 .footer__title {
   margin: 0;
   text-align: center;
-  font-weight: 400;
   font-size: 13px;
-  line-height: 1.23;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
   color: #8b8b8b;
   padding-bottom: 20px;
   border-bottom: 1px solid #424242;
@@ -37,9 +38,10 @@
 
 .footer__copyright {
   margin: 0;
-  font-weight: 400;
   font-size: 13px;
-  line-height: 1.23;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .footer__links-list {
@@ -52,9 +54,10 @@
 
 .footer__link {
   text-decoration: none;
-  font-weight: 400;
   font-size: 13px;
-  line-height: 1.23px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
   color: #fff;
   transition: all 0.3s ease;
 }
@@ -77,7 +80,6 @@
 
   .footer__title {
     font-size: 12px;
-    line-height: 1.25;
     padding-bottom: 21px;
   }
 
@@ -89,7 +91,6 @@
 
   .footer__copyright {
     font-size: 12px;
-    line-height: 1.25;
     color: #8b8b8b;
   }
 
@@ -101,6 +102,5 @@
 
   .footer__link {
     font-size: 12px;
-    line-height: 1.25;
   }
 }
