--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -79,7 +79,7 @@
   margin: 0 30px 0 20px;
 }
 
-.bottom-line {
+.search__bottom-line {
   max-width: 1140px;
   width: 100%;
   height: 1px;
@@ -90,7 +90,7 @@
 @media screen and (max-width: 1200px) {
 
   .search,
-  .bottom-line {
+  .search__bottom-line {
     max-width: calc(100% - 60px);
   }
 }
@@ -101,7 +101,7 @@
     margin-top: 80px;
   }
 
-  .bottom-line {
+  .search__bottom-line {
     margin-top: 109px;
   }
 
@@ -152,7 +152,7 @@
 @media screen and (max-width: 430px) {
 
   .search,
-  .bottom-line {
+  .search__bottom-line {
     max-width: calc(100% - 20px);
   }
 }
