--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -18,35 +18,38 @@
 
 .techs__title {
   margin: 0;
-  font-weight: 400;
   font-size: 22px;
-  line-height: 1.23;
-  letter-spacing: -0.04em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.88px;
   border-bottom: 1px solid #dadada;
   padding-bottom: 22px;
   width: 100%;
   box-sizing: border-box;
 }
 
-.techs__quantity {
+.techs__amount {
   margin: 90px 0 0;
-  font-weight: 400;
   font-size: 50px;
-  line-height: 1.16;
-  letter-spacing: -0.04em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 58px; /* 116% */
+  letter-spacing: -2px;
 }
 
 .techs__about {
-  font-weight: 400;
   font-size: 14px;
-  line-height: 1.43;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+  letter-spacing: -0.56px;
   text-align: center;
-  letter-spacing: -0.04em;
   max-width: 460px;
   margin: 26px 0 0;
 }
 
-.techs__stack {
+.techs__content {
   display: grid;
   grid-template-columns: repeat(auto-fill, 90px);
   justify-content: center;
@@ -58,19 +61,20 @@
   gap: 10px;
 }
 
-.techs__stack-item {
+.techs__content-item {
   background-color: #303030;
   border-radius: 10px;
 }
 
-.techs__stack-name {
+.techs__content-name {
   margin: 0;
   padding: 21px 0;
   text-align: center;
-  font-weight: 400;
   font-size: 14px;
-  line-height: 1.21;
-  letter-spacing: -0.04em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.56px;
 }
 
 @media screen and (max-width: 800px) {
@@ -78,24 +82,24 @@
     padding: 90px 50px;
   }
 
-  .techs__quantity {
+  .techs__amount {
     margin-top: 80px;
   }
 
   .techs__about {
     font-size: 12px;
-    line-height: 1.5;
+    letter-spacing: -0.48px;
     margin: 22px 0 0;
   }
 
-  .techs__stack {
+  .techs__content {
     margin-top: 83px;
     grid-template-columns: repeat(auto-fill, 84px);
   }
 
-  .techs__stack-name {
+  .techs__content-name {
     font-size: 12px;
-    line-height: 1.25;
+    letter-spacing: -0.48px;
   }
 }
 
@@ -110,23 +114,25 @@
 
   .techs__title {
     font-size: 18px;
-    line-height: 1.22;
+    letter-spacing: -0.72px;
     padding-bottom: 27px;
   }
 
-  .techs__quantity {
+  .techs__amount {
     margin-top: 60px;
     font-size: 30px;
-    line-height: 1.2;
+    letter-spacing: -1.2px;
+    line-height: normal;
   }
 
   .techs__about {
     font-size: 11px;
-    line-height: 1.45;
+    line-height: 16px;
+    letter-spacing: -0.44px;
     margin-top: 25px;
   }
 
-  .techs__stack {
+  .techs__content {
     margin-top: 49px;
     max-width: 180px;
   }
