--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -18,10 +18,11 @@
 
 .about-me__title {
   margin: 0;
-  font-weight: 400;
   font-size: 22px;
-  line-height: 1.23;
-  letter-spacing: -0.04em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.88px;
   border-bottom: 1px solid #dadada;
   padding-bottom: 22px;
   width: 100%;
@@ -45,23 +46,26 @@
 .about-me__name {
   margin: 0;
   font-size: 50px;
-  line-height: 1.16;
+  font-style: normal;
   font-weight: 400;
-  letter-spacing: -0.04em;
+  line-height: 58px; /* 116% */
+  letter-spacing: -2px;
 }
 
 .about-me__age {
-  font-weight: 500;
   font-size: 18px;
-  line-height: 1.11;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
   margin: 18px 0 0;
 }
 
 .about-me__text {
   margin: 26px 0 0;
-  font-weight: 400;
   font-size: 14px;
-  line-height: 1.57;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
 }
 
 .about-me__socials {
@@ -71,12 +75,13 @@
 }
 
 .about-me__social-link {
-  font-weight: 500;
   font-size: 14px;
-  line-height: 1.21;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
   color: #fff;
   text-decoration: none;
-  transition: all .3s ease;
+  transition: opacity 0.3s linear;
 }
 
 .about-me__social-link:hover {
@@ -100,20 +105,20 @@
 
   .about-me__name {
     font-size: 40px;
-    line-height: 1;
+    line-height: 40px; /* 100% */
+    letter-spacing: -1.6px;
   }
 
   .about-me__age {
     font-size: 12px;
-    line-height: 1.5;
+    line-height: 18px;
     margin-top: 16px;
   }
 
   .about-me__text {
     margin-top: 20px;
-    font-weight: 400;
     font-size: 12px;
-    line-height: 1.5;
+    line-height: 18px;
   }
 
   .about-me__socials {
@@ -146,24 +151,24 @@
 
   .about-me__title {
     font-size: 18px;
-    line-height: 1.22;
+    letter-spacing: -0.72px;
     padding-bottom: 28px;
   }
 
   .about-me__name {
     font-size: 30px;
-    line-height: 1.2;
+    line-height: normal;
+    letter-spacing: -1.2px;
   }
 
   .about-me__age {
     font-size: 11px;
-    line-height: 1.45;
     margin-top: 20px;
   }
 
   .about-me__text {
     font-size: 11px;
-    line-height: 1.45;
+    line-height: 16px;
   }
 
   .about-me__socials {
