--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 @import url(../../vendor/fonts/fonts.css);
 
-.App {
+.app {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -18,4 +18,9 @@
   color: #FFFFFF;
   overflow: hidden;
   text-rendering: optimizeLegibility;
+}
+
+.app__noScroll{
+  position: fixed;
+  overflow-y: scroll;
 }
