--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -40,13 +40,18 @@
 }
 
 .preloader {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
+    position: fixed;
     width: 100%;
     height: 100%;
     z-index: 10;
     padding: 20px;
+    background: transparent;
+}
+.preloader__active{
+    display: flex;
 }
 
 .preloader__container {
