--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -10,6 +10,12 @@
   flex-direction: column;
 }
 
+.movies-card__link{
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+}
+
 .movies-card__image {
   height: 151px;
   object-fit: cover;
